<resources>
    <string name="app_name">Kakao SDK Sample</string>

    <string name="kakao_app_key" translatable="false">dd4e9cb75815cbdf7d87ed721a659baf</string>
    <string name="kakao_scheme" translatable="false">kakaodd4e9cb75815cbdf7d87ed721a659baf</string>
    <string name="kakao_client_secret" translatable="false">50LxgHsF3Q3ayNa3nJpTTMEfBR8KkY7X</string>

    <string name="login_with_kakao">Login with Kakao</string>

    <string name="friends">Friends</string>
    <string name="kakaotalk">KakaoTalk</string>
    <string name="kakaostory">KakaoStory</string>
    <string name="kakaolink">KakaoLink</string>
    <string name="user">User</string>

    <string name="logout">Log out</string>
    <string name="unlink">Unlink</string>

    <string name="email">Email</string>
    <string name="app_user_id">App User ID</string>
    <string name="nickname">Nickname</string>

    <string name="update_scope">Update scopes</string>
    <string name="add_story">Add a story</string>


    <string name="all">All</string>
    <string name="direct">Direct</string>
    <string name="group">Group</string>

    <string-array name="chat_filters">
        <item>@string/all</item>
        <item>@string/direct</item>
        <item>@string/group</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>