<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_friends"
          android:icon="@drawable/icon_user"
          android:title="@string/friends"
          android:enabled="true"
          app:showAsAction="ifRoom" />
    <item android:title="@string/kakaotalk"
          android:icon="@drawable/icon_talk"
          android:id="@+id/menu_talk"
          android:enabled="true"
          app:showAsAction="ifRoom"/>
    <item android:title="@string/kakaostory"
          android:icon="@drawable/icon_story"
          android:id="@+id/menu_story"
          android:enabled="true"
          app:showAsAction="ifRoom"/>
    <item android:title="@string/kakaolink"
          android:icon="@drawable/icon_push"
          android:id="@+id/menu_link"
          android:enabled="true"
          app:showAsAction="ifRoom"/>
    <item android:title="@string/user"
          android:id="@+id/menu_user"
          android:icon="@drawable/icon_user"
          android:enabled="true"
          app:showAsAction="ifRoom" />

</menu>